# next_station

./: .gitignore  Dockerfile  README.md  databricks.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
dbt_project/: dbt_project.yml
dbt_project/models/silver/population_grid/: int_population_grid_h3.sql  population_models.yml
dbt_project/models/silver/railway_stations/: int_railway_stations_h3.sql  railway_models.yml
src/next_station/: fetch_population_grid.py  fetch_train_stations.py  runner.py  spark.py
src/next_station/core/: config.py  constants.py  exceptions.py  resources.py  spark.py
src/next_station/core/config/: api.py  aws.py  base.py  databricks.py  settings.py
src/next_station/core/data/: error_mappings.json
src/next_station/core/exceptions/: base.py  external.py
src/next_station/infrastructure/: compare_metadata.py  create_s3_client.py  databricks.py  get_s3_object_metadata.py  load_population_grid.py  load_railway_stations.py  runner.py  s3.py  slice_dataset.py  upload_data_to_s3.py  utils.py
src/next_station/ingestion/: __init__.py  compare_metadata.py  create_s3_client.py  fetch_population_grid.py  fetch_s3_client.py  fetch_train_stations.py  get_file_url.py  get_s3_metadata.py  ingest_population_grid.py  runner.py  upload_data_to_s3.py
src/next_station/jobs/: 01_api_to_s3_population_grid.py  01_api_to_s3_railway_stations.py  02_s3_to_bronze_population_grid.py  02_s3_to_bronze_railway_stations.py  job_01_api_to_s3_population_grid.py  job_02_s3_to_bronze_population_grid.py  publish_serving_data.py
src/next_station/providers/: fetch_population_grid.py  fetch_railway_stations.py  get_file_url.py
src/next_station/quality/: df_empty.py  extract_population_grid.py  melt_table.py
src/next_station/schemas/: worldpop.py
