[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "next_station"
version = "0.1.0"

[project.scripts]
ingest_railway_stations = "next_station.jobs.job_01_api_to_s3_railway_stations:ingest_railway_stations_to_s3"
preprocess_railway_stations = "next_station.jobs.job_02_s3_to_bronze_railway_stations:load_railway_stations_to_databricks"
ingest_population_grid = "next_station.jobs.job_01_api_to_s3_population_grid:ingest_population_grid_to_s3"
preprocess_population_grid = "next_station.jobs.job_02_s3_to_bronze_population_grid:load_population_grid_to_databricks"

dependencies = [
  "apache-sedona==1.8.1",
  "shapely==2.1.2",
  "numpy==2.4.2",
  "notebook==7.5.3",
  "boto3==1.42.64",
  "requests==2.32.5",
  "pydantic==2.12.5",
  "pydantic-settings==2.13.1",
  "python-dotenv==1.2.2",
  "PyYAML==6.0.3",
  "dbt-databricks==1.11.6"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
plugins = ["pydantic.mypy"]
